--- a/leanbit-file-engine-be/package.json
+++ b/leanbit-file-engine-be/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "chokidar": "^4.0.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "type": "module"
