--- a/leanbit-file-engine-ui/package.json
+++ b/leanbit-file-engine-ui/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shoelace-style/shoelace": "^2.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
