--- a/leanbit-file-engine-ui/package.json
+++ b/leanbit-file-engine-ui/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@shoelace-style/shoelace": "^2.20.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
